modified:   README.md renamed:    html/holders_table (7).html -> html/holders_table.html modified:   html/index.html modified:   html/token.html

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -66,7 +66,7 @@
             padding:5px;
         }
         .table-bordered thead tr {
-  border-top: 1px solid #0dcaf0 !important; /* Цвет border-info */none !important;
+  border-top: 1px solid #0dcaf0 !important; /* Цвет border-info none !important;*/
   border-bottom: none !important;
 }
   
@@ -121,7 +121,7 @@
                 return num.toString();
               }
         const holders_table = new Map();
-        const contract = 'EQAb64zkvhg6biFzqkuGEXw_cI2z4Y1MmlJE0263pCuj5nU_';
+        const contract = 'EQBvfpasf82aAQUkdGZBuAxlcUR3Al7vY1T7ifC6UXAnnhhA';
         let real_supply;
         // Функция для добавления данных в Map
         const logHolderPercentage = (element, index, totalSupply, decimals = 9) => {
