modified:   html/holders_table.html

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -77,7 +77,7 @@
     <main>
         <div class="row">
             <div class='col-11 bg-danger bg-opacity-50 mega_alert_block'>
-                <h2>🆕Левые <span class="percent">%</span></h2>
+                <h2 id="pick"><span class="percent"></span></h2>
             </div>
         </div>
         <div class="row">
@@ -108,6 +108,7 @@
     </main>
 
     <script>
+        
          function formatNumber(num) {
             if (num >= 1000000000) {
                 return (num / 1000000000).toFixed(2) + 'B';
@@ -142,6 +143,8 @@
 
         // Функция для рендера таблицы
         const renderTable = () => {
+            const pick = document.getElementById("pick")
+            pick.textContent="Все"
             const all_btn = document.getElementById("btn-1")
             const lev_btn = document.getElementById("btn-2")
             const otleg_btn = document.getElementById("btn-3")
@@ -150,6 +153,15 @@
             all_btn.textContent=`Все (${holders_table.size})`;
             lev_btn.textContent=`Левые ()`;
             otleg_btn.textContent=`Отлега ()`
+            all_btn.onclick = function(){
+                pick.textContent="Все"
+            }
+            lev_btn.onclick = function(){
+                pick.textContent="Левые"
+            }
+            otleg_btn.onclick = function(){
+                pick.textContent="Отлега"
+            }
             const tableBody = document.getElementById("tableinsert");
             tableBody.innerHTML = ""; // Очищаем перед обновлением
             const dict =  ["1f991.png","1f990.png","1f433.png","1f421.png","1f420.png","1f419.png"]
