--- a/html/index.html
+++ b/html/index.html
@@ -306,7 +306,7 @@
           </div>
         </div>
         <div class="mx-auto col-6">
-          <img class="logo" src="../src/logo.gif" />
+          <img class="logo" src="../src/logo.png" />
         </div>
       </div>
       <div class="row">
