--- a/html/token.html
+++ b/html/token.html
@@ -9,7 +9,10 @@
       const sevenDaysAgo = currentTimestamp - 7 * 24 * 60 * 60;
       console.log(sevenDaysAgo);
 
-      let contract = "EQBvfpasf82aAQUkdGZBuAxlcUR3Al7vY1T7ifC6UXAnnhhA";
+      let contract = null;
+      if (localStorage.getItem("contract")) {
+        contract = localStorage.getItem("contract");
+      }
       function formatNumber(num) {
         if (num >= 1000000000) {
           return (num / 1000000000).toFixed(2) + "B";
