--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 />
               </svg>
             </button>
-            <a href="token.html">
+            <a href="html/token.html">
               <button class="search-button" id="search">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
