--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </button>
             <button type="button" class="btn btn-outline-secondary">
               <img
-                src="../src/утенок.gif"
+                src="src/утенок.gif"
                 width="30"
                 height="24"
                 class="d-inline-block align-text-top"
@@ -220,7 +220,7 @@
           <a class="navbar-brand" href="#">
             <span class="radiant-purple">JettonAnalizer</span>
             <img
-              src="../src/output-onlinegiftools.gif"
+              src="src/output-onlinegiftools.gif"
               width="30"
               height="24"
               class="d-inline-block align-text-top"
@@ -271,7 +271,7 @@
             </svg>
 
             <img
-              src="../src/support.png"
+              src="src/support.png"
               width="30"
               height="24"
               class="d-inline-block align-text-top"
