добавил ссылку в headere на главную страницу

--- a/html/token.html
+++ b/html/token.html
@@ -345,7 +345,9 @@
           </div>
           <div class="mx-auto">
             <a class="navbar-brand" href="#">
-              <span class="radiant-purple">JettonAnalizer</span>
+              <a href="../index.html"
+                ><span class="radiant-purple">JettonAnalizer</span></a
+              >
               <img
                 src="../src/ton.gif"
                 width="30"
