выранял гифку в центре навбара

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -137,13 +137,7 @@
             <div class="mx-auto">
               <a class="navbar-brand" href="#">
                 <a href="../index.html"><span class="radiant-purple">JettonAnalizer</span></a>
-                <img
-                  src="../src/ton.gif"
-                  width="30"
-                  height="24"
-                  class="d-inline-block align-text-top"
-                  style="margin-top: 5px"
-                />
+                <img src="../src/ton.gif" width="30" height="24" class="d-inline-block align-text-top" style="margin-top: -2px">
               </a>
             </div>
   
@@ -211,9 +205,9 @@
             <div class="col-11 mx-auto container">
                 <div class="content border border-white border- rounded">
                     <div class="d-flex">
-                    <button id="btn-1" class=" hoder_btn radiant-purple"></button>
-                    <button id="btn-2" class=" hoder_btn radiant-purple"></button>
-                    <button id="btn-3" class=" hoder_btn radiant-purple"></button>
+                    <button id="btn-1" class=" hoder_btn "></button>
+                    <button id="btn-2" class=" hoder_btn "></button>
+                    <button id="btn-3" class=" hoder_btn "></button>
                     <span id="all_holder" class="ms-auto"></span>
                 </div>
                 <table class="table table-bordered border-info">
