--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -110,7 +110,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top">
+        <nav class="navbar ">
           <div class="container-fluid">
             <div class="me-auto">
               <div class="language_container">
