--- a/html/token.html
+++ b/html/token.html
@@ -319,7 +319,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar fixed-top">
+      <nav class="navbar">
         <div class="container-fluid">
           <div class="me-auto">
             <div class="language_container">
@@ -353,7 +353,7 @@
                 width="30"
                 height="24"
                 class="d-inline-block align-text-top"
-                style="margin-top: 5px"
+                style="margin-top: 1px"
               />
             </a>
           </div>
