modified:   index.html

--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
     </main>
   </body>
   <script>
+    localStorage.clear();
     // Функция вставки из буфера
     document
       .getElementById("pasteButton")
