изменено:      html/token.html

--- a/html/token.html
+++ b/html/token.html
@@ -177,7 +177,7 @@
               />Donate project
             </button></a>
           </div>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <span class="radiant-purple">JettonAnalizer</span>
             <img
               src="../src/output-onlinegiftools.gif"
