добавил favicon и так по мелочи

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
+
     <!-- Стили остаются без изменений -->
     <style>
       /* Общий стиль */
