пофикшен конфликт коммитов

--- a/html/token.html
+++ b/html/token.html
@@ -415,7 +415,7 @@
               <div class="token_info_block">
                 <p>
                   <img
-                    src="../src/"
+                    src="../src/liquidity.gif"
                     width="30"
                     height="24"
                     class="d-inline-block align-text-top"
@@ -428,7 +428,7 @@
               <div class="token_info_block">
                 <p>
                   <img
-                    src=""
+                    src="../src/treancsations.gif"
                     width="30"
                     height="24"
                     class="d-inline-block align-text-top"
@@ -450,7 +450,7 @@
               <div class="token_info_block">
                 <p>
                   <img
-                    src=""
+                    src="../src/supply.gif"
                     width="30"
                     height="24"
                     class="d-inline-block align-text-top"
